implemented userService and AdminService